automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,11 @@ img, video, audio, iframe, table, form {
   box-shadow: 0 3px 10px #333;
 }
 
+.border-right {
+  border-right: 1px dotted #ccc;
+  padding-right: 30px;
+}
+
 [class*="col-"] {
   margin-left: 2%;
 }
