--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,15 @@ header {
 
 /*////////// NAVBAR //////////*/
 
-
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px #ccc;
+  text-align: center;
+}
 
 /*////////// LOGO //////////*/
 
