automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,15 @@ header {
   text-align: center;
 }
 
+#navbar nav {
+  border-left: 1px solid #ccc;
+}
+
+#navbar nav a {
+  display: inline-block;
+  width: 16.66667%
+}
+
 /*////////// LOGO //////////*/
 
 
