automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,9 @@ header {
 
 #navbar nav a {
   display: inline-block;
-  width: 16.66667%
+  width: 16.66667%;
+  margin: 0;
+  padding: 22px 0;
 }
 
 /*////////// LOGO //////////*/
