--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ header {
   color: black;
   text-align: center;
   border-right: 1px solid #ccc;
+  text-decoration: none;
 }
 
 /*////////// LOGO //////////*/
