--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,11 @@ header {
   font: 1em, "Trebuchet MS", Arial, sans-serif;
 }
 
+#navbar nav a:selected {
+  background: #333;
+  
+}
+
 /*////////// LOGO //////////*/
 
 
